// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing  
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing  
    24
     
    expenses
     totalling 
    $2,350.08
  </h1>
</div>
`;
